--- a/website/static/website/css/style.css
+++ b/website/static/website/css/style.css
@@ -3391,30 +3391,41 @@ body.navigation--active {
       object-fit: cover; }
     .slider--slide.slider--slide--has-text {
       height: 190px; }
-    .slider--slide.slider--slide--has-two-images .slider--slide-image {
-      height: calc(190px / 2) !important; }
-      .slider--slide.slider--slide--has-two-images .slider--slide-image:first-child {
-        float: left;
-        width: 50%; }
-      .slider--slide.slider--slide--has-two-images .slider--slide-image:last-child {
-        float: right;
-        width: calc(50% + 0.1px); }
-      .slider--slide.slider--slide--has-two-images .slider--slide-image img {
-        height: calc(190px / 2) !important;
-        object-fit: cover;
+    .slider--slide.slider--slide--has-two-images {
+      position: relative; }
+      .slider--slide.slider--slide--has-two-images .slider--slide-image {
+        height: auto !important;
+        position: absolute;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: calc(50% - 8px); }
+        .slider--slide.slider--slide--has-two-images .slider--slide-image:first-child {
+          left: 25%; }
+        .slider--slide.slider--slide--has-two-images .slider--slide-image:last-child {
+          left: 75%; }
+        .slider--slide.slider--slide--has-two-images .slider--slide-image img {
+          height: auto !important;
+          object-fit: contain;
+          width: auto; }
+      .slider--slide.slider--slide--has-two-images.slider--slide--has-two-images-landscape .slider--slide-image {
+        height: calc(190px / 2 - 8px) !important;
         width: 100%; }
+        .slider--slide.slider--slide--has-two-images.slider--slide--has-two-images-landscape .slider--slide-image:first-child {
+          left: 50%;
+          top: 25%; }
+        .slider--slide.slider--slide--has-two-images.slider--slide--has-two-images-landscape .slider--slide-image:last-child {
+          left: 50%;
+          top: 75%; }
+        .slider--slide.slider--slide--has-two-images.slider--slide--has-two-images-landscape .slider--slide-image img {
+          height: auto !important;
+          max-height: calc(190px / 2 - 8px);
+          object-fit: contain; }
+        .slider--slide.slider--slide--has-two-images.slider--slide--has-two-images-landscape .slider--slide-image .image-overlay--link {
+          height: auto;
+          max-height: calc(190px / 2 - 8px); }
     .slider--slide .image-overlay--link {
       display: inline-block;
       width: auto; } }
-  @media (min-width: 400px) and (max-width: 767px) {
-    .slider--slide.slider--slide--has-two-images .slider--slide-image {
-      height: 190px !important; }
-      .slider--slide.slider--slide--has-two-images .slider--slide-image:first-child, .slider--slide.slider--slide--has-two-images .slider--slide-image:last-child {
-        width: calc(50% - 0.5rem); }
-      .slider--slide.slider--slide--has-two-images .slider--slide-image .image-overlay--link {
-        height: 100%; }
-      .slider--slide.slider--slide--has-two-images .slider--slide-image img {
-        height: 100% !important; } }
   @media (min-width: 768px) {
     .slider--slide {
       height: 360px;
